fix gap of hero

--- a/styles.css
+++ b/styles.css
@@ -109,6 +109,7 @@ textarea:not([rows]) {
 
 body {
   font-family: "Red Hat Display", sans-serif;
+  background-color: #f2f2f2;
 }
 
 header {
@@ -331,7 +332,7 @@ footer {
 
   .gallery {
     grid-template-columns: repeat(4, 1fr);
-    max-width: 43.0625rem;
+    max-width: 69.375rem;
     gap: 0.6875rem;
     margin-bottom: 3rem;
   }
@@ -354,7 +355,7 @@ footer {
   }
 }
 
-@media screen and (min-width: 61.125rem) {
+@media screen and (min-width: 70.625rem) {
   header {
     padding-top: 5rem;
     padding-bottom: 3.8125rem;
@@ -363,6 +364,7 @@ footer {
   .hero {
     flex-direction: row;
     max-width: 94rem;
+    gap: 5.5rem;
     margin: 0 auto 12.125rem;
   }
 
